sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:2: error: identifier expected but 'val' found.
def val change=true;
    ^AlgBubbleSort1:6: error: '<-' expected but '=' found.
for (i=0 to lgr-2)
      ^AlgBubbleSort1:11: error: illegal start of simple expression
} 
^